# haste-app

./: .gitignore  App.hs  Client.hs  LICENSE  Protocol.hs  README.md  Remote.hs  Routing.hs  Server.hs  haste-app.cabal
bin-src/: AppConfig.hs  Commands.hs  Config.hs  Environment.hs  Logging.hs  Main.hs  Options.hs  ToolInstallers.hs
bin-src/Commands/: Build.hs  Clean.hs  Configure.hs  Delete.hs  Help.hs  Init.hs  Install.hs  Setup.hs  ToolSetup.hs
examples/: counter.hs  database.hs  firewall.hs  helloworld.hs  loadbalance.hs  logging.hs  routing.hs  sandbox.hs  tree.hs
src/Haste/: App.hs
src/Haste/App/: Client.hs  Config.hs  Protocol.hs  Remote.hs  Routing.hs  Sandbox.hs  Server.hs  Simple.hs  Standalone.hs  Transport.hs  V2.hs  test.hs
src/Haste/App/Client/: Type.hs
src/Haste/App/Protocol/: Types.hs
src/Haste/App/Sandbox/: Internal.hs
src/Haste/App/Server/: Type.hs
src/Haste/App/Standalone/: Config.hs  Embed.hs  Server.hs
src/Haste/App/V2/: Client.hs  Config.hs  Protocol.hs  Remote.hs  Routing.hs  Server.hs  Simple.hs  Standalone.hs  WebSockets.hs
src/Haste/App/V2/Protocol/: Types.hs
src/Haste/App/V2/Standalone/: Config.hs  Embed.hs  Server.hs
