name:                haste-app
version:             0.1.0.0
synopsis:            Framework for type-safe, distributed web applications.
-- description:         
homepage:            http://haste-lang.org
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable haste-app
  hs-source-dirs: src, bin-src
  main-is: Main.hs
  default-language: Haskell2010
  other-modules:
    Config,
    Options
  build-depends:
    base       >= 4.8   && < 4.9,
    data-embed >= 0.1   && < 0.2,
    shellmate  >= 0.3.4 && < 0.4

library
  exposed-modules:
    Haste.App,
    Haste.App.Simple,
    Haste.App.Standalone
  other-modules:
    Haste.App.Client,
    Haste.App.Config,
    Haste.App.Protocol
    Haste.App.Remote,
    Haste.App.Routing,
    Haste.App.Server
  other-extensions:
    CPP,
    GeneralizedNewtypeDeriving,
    UndecidableInstances,
    ScopedTypeVariables,
    TypeFamilies,
    DataKinds,
    TypeOperators,
    PolyKinds,
    FlexibleInstances,
    StaticPointers,
    MultiParamTypeClasses,
    FlexibleContexts,
    ConstraintKinds
  build-depends:
    base         >=4.8 && <4.9,
    transformers >=0.4 && <0.6,
    haste-lib    >=0.6 && <0.7,
    haste-prim   >=0.6 && <0.7,
    containers   >=0.5 && <0.6

  if !impl(haste)
    other-modules:
      Haste.App.Standalone.Config,
      Haste.App.Standalone.Embed,
      Haste.App.Standalone.Server

    build-depends:
      bytestring     >=0.10 && <0.11,
      data-embed     >=0.1  && <0.2,
      filepath       >=1.4  && <1.5,
      directory      >=1.2  && <1.3,
      http-types     >=0.9  && <0.10,
      network-info   >=0.2  && <0.3,
      temporary      >=1.2  && <1.3,
      text           >=1.2  && <1.3,
      utf8-string    >=1.0  && <1.1,
      websockets     >=0.8  && <0.10,
      wai            >=3.2  && <3.3,
      wai-websockets >=3.0  && <3.1,
      warp           >=3.2  && <3.3,
      warp-tls       >=3.2  && <3.3
  hs-source-dirs:
    src
  ghc-options:
    -Wall
  default-language:
    Haskell2010
